@@ -6,7 +6,7 @@ version: '[% c("abbrev") %]'
 steps:
   base-browser:
     base-browser: '[% INCLUDE build %]'
-    git_hash: b7a2b2cde8e814640554e14520b6b81693810bbd
+    git_hash: 066d24af02663ecfbf181541acd4ebd0988499ef
     targets:
       nightly:
         git_hash: 'base-browser'
@@ -18,7 +18,7 @@ steps:
         git_hash: 'basebrowser-newidentityftl'
   tor-browser:
     tor-browser: '[% INCLUDE build %]'
-    git_hash: 00be2129bd017415db63a5da5e18ce54375b7dde
+    git_hash: 7fb3fda1132392cc45c3c147757d95c14278f400
     targets:
       nightly:
         git_hash: 'tor-browser'
@@ -26,7 +26,7 @@ steps:
     fenix: '[% INCLUDE build %]'
     # We need to bump the commit before releasing but just pointing to a branch
     # might cause too much rebuidling of the Firefox part.
-    git_hash: fca8abec22d042536973c482af21683edd98f1b1
+    git_hash: 51045186952e0eab228e4c887914beceaff76583
     targets:
       nightly:
         git_hash: 'fenix-torbrowserstringsxml'
