@@ -94,13 +94,12 @@ buildconf:
   git_signtag_opt: '-s'
 
 var:
-  torbrowser_version: '12.5.5'
+  torbrowser_version: '12.5.6'
   torbrowser_build: 'build1'
   torbrowser_incremental_from:
+    - 12.5.5
     - 12.5.4
     - 12.5.3
-    - 12.5.2
-    - 12.5.1
   updater_enabled: 1
   build_mar: 1
   mar_channel_id: '[% c("var/projectname") %]-torproject-[% c("var/channel") %]'
