@@ -1,3 +1,10 @@
+Tor Browser 12.5.6 - September 29 2023
+ * All Platforms
+   * Bug 42135: Backport security fixes from Firefox 115.3.1 to 102.15.1 [tor-browser]
+ * Build System
+   * All Platforms
+     * Bug 40957: Update subkey expiration date for Tor Browser gpg key [tor-browser-build]
+
 Tor Browser 12.5.5 - September 25 2023
  * All Platforms
    * Updated tor to 0.4.7.15
